added support for ID 0x02e0 (Nvidia GeForce 7600 GT), closing bug #2465. +alphabranch.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@32868 a95241bf-73f2-0310-859d-f6bbb57e9c96